FRONT-1578 using correct z-index tokens

--- a/src/systems/eu/implementations/vanilla/packages/eu-component-form-select/eu-component-form-select.scss
+++ b/src/systems/eu/implementations/vanilla/packages/eu-component-form-select/eu-component-form-select.scss
@@ -220,7 +220,7 @@
       box-sizing: border-box;
       margin-top: $ecl-spacing-xs;
       position: absolute;
-      z-index: 1;
+      z-index: $ecl-z-index-dropdown;
     }
 
     .ecl-text-input {
